--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@ body {
   background-image: url("assets/background.png");
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
 }
 
 body::before {
   content: "";
-  position: absolute;
+  position: fixed;
   top: 0px;
   right: 0px;
   bottom: 0px;
@@ -16,9 +17,21 @@ body::before {
 
 .app-title {
   text-align: center;
-  margin-top: 30%;
+  margin-top: 35%;
   color: white;
-  font-size: 36px;
+  font-size: 38px;
+}
+
+.button-row{
+  margin-top: 70%;
+}
+
+.landing-button {
+  background-color: brown;
+  color: white;
+  padding: 1rem 0;
+  margin-bottom: 7%;
+  border: 4px solid black;
 }
 
 .shop-button {
@@ -29,8 +42,42 @@ body::before {
   border: 4px solid black;
 }
 
-/* put black? border around each button */
+.shop-button {
+  background-color: brown;
+  color: white;
+  height: 20%;
+  margin-bottom: 7%;
+  border: 4px solid black;
+}
+
+.gear-button {
+  background-color: brown;
+  color: white;
+  height: 5rem;
+  margin-bottom: 5%;
+  border: 4px solid black;
+  padding: 0 2%;
+}
 
 .categories {
   margin-top: 30%;
+}
+
+.img-container{
+  height: 100%;
+  padding-left: 5%;
+}
+
+.gear-text {
+  font-size: 1rem;
+  line-height: .8;
+  padding-top: 5%;
+}
+
+.vertical-align {
+  height: 100%;
+}
+
+.gear-list {
+  margin-top: 20%;
 }
