--- a/style.css
+++ b/style.css
@@ -42,25 +42,21 @@ body::before {
   border: 4px solid black;
 }
 
-.shop-button {
-  background-color: brown;
-  color: white;
-  height: 20%;
-  margin-bottom: 7%;
-  border: 4px solid black;
-}
-
 .gear-button {
   background-color: brown;
   color: white;
-  height: 5rem;
+  height: 12vh;
   margin-bottom: 5%;
   border: 4px solid black;
   padding: 0 2%;
 }
 
+.gear-button > * {
+  pointer-events: none;
+}
+
 .categories {
-  margin-top: 30%;
+  margin-top: 20%;
 }
 
 .img-container{
@@ -79,5 +75,13 @@ body::before {
 }
 
 .gear-list {
-  margin-top: 20%;
+  margin-top: 10%;
+}
+
+.nav-style {
+  background-color: black;
+}
+
+.home-button {
+  color: lightgrey;
 }
