--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+  font-family: 'Do Hyeon', sans-serif;
+}
+
 body {
   background-image: url("assets/background.png");
   background-repeat: no-repeat;
@@ -18,8 +22,11 @@ body::before {
 .app-title {
   text-align: center;
   margin-top: 35%;
-  color: white;
-  font-size: 38px;
+  color: mintcream;
+  font-size: 40px;
+  font-family: 'Do Hyeon', sans-serif;
+  text-shadow: 6px 6px 5px black, 6px 6px 5px black;
+
 }
 
 .button-row{
@@ -27,7 +34,7 @@ body::before {
 }
 
 .landing-button {
-  background-color: brown;
+  background-color: saddlebrown;
   color: white;
   padding: 1rem 0;
   margin-bottom: 7%;
@@ -56,7 +63,7 @@ body::before {
 }
 
 .categories {
-  margin-top: 20%;
+  margin-top: 30%;
 }
 
 .img-container{
@@ -75,7 +82,7 @@ body::before {
 }
 
 .gear-list {
-  margin-top: 10%;
+  margin-top: 25%;
 }
 
 .nav-style {
@@ -84,4 +91,52 @@ body::before {
 
 .home-button {
   color: lightgrey;
+}
+
+
+/* MODAL STUFF */
+.modal-content{
+  background-color: #8A9688;
+  width: 95%;
+  border: 2px solid white;
+}
+
+.stats-header {
+  padding-top: 5%;
+}
+
+.stats-header > .gear-text {
+  padding-top: 7%;
+}
+
+.defense-stats {
+  font-size: 2.2vh;
+}
+
+.modal-body > .row {
+  margin-bottom: 5%;
+}
+
+.slots-skills {
+  font-size: 3vh;
+}
+
+.button-container {
+  text-align: center;
+  width: 100%;
+}
+
+.purchase-button {
+  width: 95%;
+  height: 7vh;
+  margin-bottom: 5%;
+  background-color: #228B22;
+  border: 2px solid black;
+}
+
+.close-button {
+  width: 50%;
+  height: 6vh;
+  justify-self: center;
+  border: 2px solid black;
 }
