--- a/style.css
+++ b/style.css
@@ -140,3 +140,16 @@ body::before {
   justify-self: center;
   border: 2px solid black;
 }
+
+.thank-you-modal{
+  background-color: mintcream;
+  opacity: 0.7;
+  width: 70%;
+  border: 2px solid black;
+  border-radius: 2%;
+}
+
+.thank-you-text {
+  padding: 0;
+  margin: 0;
+}
