--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ body::before {
   margin-top: 15vh;
   font-size: 1.8rem;
   color: mintcream;
-  text-shadow: 5px 5px 4px black;
+  text-shadow: 3px 3px 4px black;
 }
 
 /* MODAL STUFF */
@@ -238,7 +238,7 @@ body::before {
     line-height: .5;
     padding-top: 4%
   }
-  /* Gear Stats Modal */
+
   .modal-content{
     width: 85%;
   }
@@ -338,7 +338,7 @@ body::before {
 /* landscape ipad */
 @media only screen and (min-width: 1024px) {
   body {
-    background-image: url("assets/background3.png");
+    background-image: url("assets/bg1.jpg");
   }
   .nav-style, .back-text{
     font-size: 1.25rem;
@@ -361,13 +361,11 @@ body::before {
 
 @media (min-width: 1050px) {
   body{
-    background-image: none;
-    background-color: black;
-  }
-  .background{
-    background-image: url("assets/background3.png");
+    background-image: url("assets/bg1.jpg");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-attachment: fixed;
+    background-size: auto 100vh;
+    background-color: black;
   }
   .app-title {
     margin-top: 10%;
