--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@ body {
   background-attachment: fixed;
 }
 
-
-
 .app-title {
   text-align: center;
   margin-top: 15vh;
@@ -45,8 +43,8 @@ body {
   color: white;
   height: 12vh;
   width: 85%;
-  margin-bottom: 5%;
-  border: 4px solid black;
+  margin-bottom: 4%;
+  border: 3px solid black;
   padding: 0 2%;
 }
 
@@ -83,17 +81,38 @@ body {
 
 .gear-list {
   margin-top: 13vh;
-
   cursor: pointer;
 }
 
 .nav-style {
-  background-color: black;
+  background-color: #1C110D;
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
   z-index: 2;
+}
+
+.bottom-nav-style {
+  background-color: #1C110D;
+  position: fixed;
+  z-index: 2;
+  padding: 0;
+}
+
+.footer-icon{
+  width: 35px;
+}
+
+.footer-text{
+  color: white;
+  font-size: 11px;
+  line-height: .5;
+  padding-bottom: 8px;
+}
+
+.footer-button {
+  margin: 0 35px;
 }
 
 .back-button {
@@ -116,6 +135,7 @@ body {
 
 .page-name {
   color: lightgrey;
+  font-size: 1.1rem
 }
 
 .empty-backpack-text {
@@ -230,7 +250,7 @@ body {
   }
   .gear-button {
     height: 20vh;
-    margin-bottom: 3%;
+    margin-bottom: 2%;
     padding: 0 2%;
   }
   .gear-text{
@@ -241,6 +261,7 @@ body {
   .modal-content{
     width: 85%;
   }
+
   .stats-header {
     padding-top: 0;
   }
@@ -260,7 +281,7 @@ body {
     height: 12vh;
   }
   .inventory-column{
-    margin-top: 3%;
+    margin-top: 10%;
   }
 }
 
@@ -273,6 +294,14 @@ body {
   .nav-style, .back-text{
     font-size: 1.25rem;
   }
+
+  .footer-icon{
+    width: 45px;
+  }
+  .footer-text{
+    font-size: 16px;
+  }
+
   .app-title {
     margin-top: 18vh;
     font-size: 60px;
@@ -285,6 +314,13 @@ body {
     padding: 2vh 0;
     font-size: 1.75rem;
   }
+  .gear-button {
+    height: 10.5vh;
+    width: 80%;
+    margin-bottom: 3%;
+    padding: 0 2%;
+  }
+
   .gear-list-image {
     width: 100px;
   }
@@ -337,23 +373,36 @@ body {
 /* landscape ipad */
 @media only screen and (min-width: 1024px) {
   body {
-    background-image: url("assets/bg1.jpg");
+    background-image: url("assets/background3.png");
   }
   .nav-style, .back-text{
     font-size: 1.25rem;
   }
+
   .shop-button {
-    height: 15vh;
+    height: 12vh;
+    margin: 0;
     margin-bottom: 3vh;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
   }
   .gear-button {
-    height: 15vh;
-    width: 90%;
-    margin-bottom: 3%;
-    padding: 0 2%;
+    height: 12vh;
+    width: 43%;
+    margin: 1% 2%;
+    padding: 0;
   }
+
+  .gear-list-image{
+    width: 80px;
+  }
+
   .gear-text{
     padding-top: 4%;
+  }
+  .modal-body > .row {
+    margin-bottom: 3%;
   }
 }
 
@@ -385,6 +434,8 @@ body {
   }
   .categories-column{
     justify-content: center;
+    align-items: center;
+    margin-top: 3rem;
   }
   .shop-button{
     height: 5rem;
@@ -397,11 +448,12 @@ body {
     margin-top: 4%;
     padding-top: 8%;
   }
+
   .gear-button {
     height: 6rem;
-    width: 70%;
-    margin-bottom: 3%;
-    padding: 0 2%;
+    width: 43%;
+    margin: 1% 2%;
+    padding: 0;
   }
   .contents-column{
     padding-bottom: 15%;
