--- a/style.css
+++ b/style.css
@@ -491,22 +491,32 @@ body {
     height: 700px;
     min-width: 800px;
     min-height: 700px;
+    max-width: 800px;
+    max-height: 700px;
     background: url(assets/background3.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    display: flex;
     align-items: center;
     justify-content: flex-end;
     flex-direction: column;
     margin-right: auto;
     margin-left: auto;
+    position: relative;
 }
 
   #nav-top {
     background-color: #1C110D;
-    position: relative;
+    position: fixed;
     z-index: 2;
+  }
+
+  .background {
+     max-height: 100%;
+    overflow: auto;
+  }
+  .gear-list {
+
   }
 
 }
