--- a/style.css
+++ b/style.css
@@ -429,7 +429,6 @@ body {
 @media (min-width: 1050px) {
 
   .app-title {
-    margin-top: 18vh;
     font-size: 60px;
   }
   .landing-button {
@@ -439,10 +438,9 @@ body {
   }
   .button-row{
     margin-top: 12vh;
-    margin-bottom: 12vh;
   }
   .categories{
-    margin-top: 15vh;
+    margin-top: 0;
   }
   .categories-column{
     justify-content: center;
@@ -450,7 +448,7 @@ body {
     margin-top: 3rem;
   }
   .shop-button{
-    height: 9vh;
+    height: 90px;
     width: 65%;
     margin-bottom: 2%;
     margin-left: auto;
@@ -487,11 +485,11 @@ body {
   }
 
   .window{
-    width: 800px;
+    width: 900px;
     height: 700px;
-    min-width: 800px;
+    min-width: 900px;
     min-height: 700px;
-    max-width: 800px;
+    max-width: 900px;
     max-height: 700px;
     background: url(assets/background3.png);
     background-size: contain;
@@ -512,11 +510,20 @@ body {
   }
 
   .background {
-     max-height: 100%;
+    max-height: 100%;
     overflow: auto;
   }
-  .gear-list {
 
+  .home-page {
+    height: auto;
+  }
+
+  .app-title {
+    margin-top: 0;
+    padding-top: 100px;
+  }
+  .button-row{
+    margin-bottom: 0;
   }
 
 }
