--- a/style.css
+++ b/style.css
@@ -160,6 +160,7 @@ body {
   background-color: #8A9688;
   width: 95%;
   border: 2px solid white;
+  box-shadow: 4px 4px 10px black;
 }
 
 .stats-header {
@@ -390,7 +391,7 @@ body {
 }
 
 /* landscape ipad */
-@media only screen and (min-width: 1024px) {
+/* @media only screen and (min-width: 1024px) {
   body {
     background-image: url("assets/background3.png");
   }
@@ -423,58 +424,11 @@ body {
   .modal-body > .row {
     margin-bottom: 3%;
   }
-}
+} */
 
 
+/* @media (min-width: 768px) { */
 @media (min-width: 1050px) {
-
-  .app-title {
-    font-size: 60px;
-  }
-  .landing-button {
-    width: 51%;
-    font-size: 1.5rem;
-    padding: .7rem 0;
-  }
-  .button-row{
-    margin-top: 12vh;
-  }
-  .categories{
-    margin-top: 0;
-  }
-  .categories-column{
-    justify-content: center;
-    align-items: center;
-    margin-top: 3rem;
-  }
-  .shop-button{
-    height: 90px;
-    width: 65%;
-    margin-bottom: 2%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .gear-list{
-    margin-top: 4%;
-    padding-top: 8%;
-  }
-
-  .gear-button {
-    height: 6rem;
-    width: 43%;
-    margin: 1% 2%;
-    padding: 0;
-  }
-  .contents-column{
-    padding-bottom: 15%;
-  }
-  .gear-list-image {
-    width: 80px;
-  }
-
-
-  /* TESTING */
-
   body {
     height: 100vh;
     background-image: none;
@@ -501,12 +455,6 @@ body {
     margin-right: auto;
     margin-left: auto;
     position: relative;
-}
-
-  #nav-top {
-    background-color: #1C110D;
-    position: fixed;
-    z-index: 2;
   }
 
   .background {
@@ -514,16 +462,120 @@ body {
     overflow: auto;
   }
 
+  .app-title {
+    font-size: 60px;
+    margin-top: 0;
+    padding-top: 125px;
+  }
+
+  .landing-button {
+    width: 51%;
+    font-size: 1.5rem;
+    padding: .8rem 0;
+  }
+
+  .button-row{
+    margin-top: 100px;
+    margin-bottom: 0;
+  }
+
+  #nav-top {
+    background-color: #1C110D;
+    position: relative;
+    z-index: 2;
+  }
+
+  .bottom-nav-style {
+    position: absolute;
+    width: 100%;
+    height: 55px;
+    z-index: 2;
+    bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .footer-icon{
+    width: 39px;
+  }
+  .footer-text{
+    font-size: 14px;
+  }
+  .categories{
+    margin-top: 0;
+  }
+  .categories-column{
+    justify-content: center;
+    align-items: center;
+    margin-top: 70px;
+  }
+  .shop-button{
+    height: 80px;
+    width: 65%;
+    margin-bottom: 2%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .gear-list{
+    margin-top: 4%;
+    padding-top: 0;
+    height: 525px;
+  }
+
+  .gear-list > .gear-button:last-child {
+    margin-bottom: 50px;
+  }
+
+  .gear-list > .gear-button:nth-last-child(2):not(:nth-child(even)) {
+    margin-bottom: 50px;
+  }
+
+  .gear-button {
+    height: 90px;
+    width: 40%;
+    margin: 1% 2%;
+    padding: 0;
+  }
+  .contents-column{
+    padding-bottom: 15%;
+  }
+  .gear-list-image {
+    width: 80px;
+  }
+  .empty-backpack-text {
+    margin-top: 150px;
+  }
   .home-page {
     height: auto;
   }
 
-  .app-title {
-    margin-top: 0;
-    padding-top: 100px;
-  }
-  .button-row{
-    margin-bottom: 0;
+  /* GEAR MODAL */
+
+  .stats-header{
+    padding-top: 0;
+    height: auto;
   }
 
+  .gear-content{
+    line-height: 1.5;
+    padding-top: 0;
+  }
+
+  .gear-content > .row{
+    margin-bottom: 20px;
+  }
+
+  .defense-stats{
+    font-size: 20px;
+    padding-left: 25px;
+  }
+
+  .slots-skills{
+    font-size: 20px;
+  }
+
+  .button-container > button {
+    height: 50px;
+  }
 }
