--- a/style.css
+++ b/style.css
@@ -491,7 +491,7 @@ body {
   .bottom-nav-style {
     position: absolute;
     width: 100%;
-    height: 55px;
+    height: 52px;
     z-index: 2;
     bottom: 0;
     margin-left: auto;
@@ -589,4 +589,27 @@ body {
   .button-container > button {
     height: 50px;
   }
+
+/* SCROLLBAR */
+
+/* width */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: none;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(29, 29, 29, 0.9);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(0, 0, 0, 1);
+}
 }
